# syncdesk

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
schemas/: control.fbs
src/: main.cpp
src/core/: AudioMatrix.cpp  AudioMatrix.h  JitterBuffer.cpp  JitterBuffer.h  RingBuffer.h  SessionManager.cpp  SessionManager.h
src/discovery/: MdnsService.cpp  MdnsService.h
src/ipc/: ControlServer.cpp  ControlServer.h
src/platform/: AudioEngine.cpp  AudioEngine.h
src/transport/: OpusCodec.cpp  OpusCodec.h  RtpReceiver.cpp  RtpReceiver.h  RtpSender.cpp  RtpSender.h
tests/: test_discovery.cpp  test_jitter_buffer.cpp  test_matrix.cpp  test_opus.cpp  test_ring_buffer.cpp  test_rtp.cpp  test_session_manager.cpp
